Apply MVVM and fix some bugs

--- a/UltimatePortfolio2023/Localization/en.lproj/Localizable.strings
+++ b/UltimatePortfolio2023/Localization/en.lproj/Localizable.strings
@@ -38,6 +38,8 @@
 "Open" = "Open";
 "Closed" = "Closed";
 
+"No tags" = "No tags";
+
 "Low" = "Low";
 "Medium" = "Medium";
 "High" = "High";
@@ -78,6 +80,8 @@
 /* AWARDS VIEW */
 "Awards" = "Awards";
 
+"Locked" = "Locked";
+"Unlocked: %@" = "Unlocked: %@";
 
 
 /* DATA */
